--- a/config/Treecapitator.cfg
+++ b/config/Treecapitator.cfg
@@ -232,106 +232,6 @@ tree_and_mod_configs {
     # by the mod itself via IMC (inter-mod communication). [default: false]
     B:userConfigOverridesIMC=false
 
-    ##########################################################################################################
-    # 1_vanilla_trees_and_items
-    #--------------------------------------------------------------------------------------------------------#
-    # This special category is the home of the vanilla tree block and item configurations. You can change the 
-    # values in this category to suit your preferences.
-    # 
-    # WARNING: This config category must not be removed! If this category is renamed or removed Treecapitator 
-    # will assume your config file is new and reload the default user mod config settings!
-    ##########################################################################################################
-
-    1_vanilla_trees_and_items {
-        S:modID=minecraft
-        S:axeIDList=minecraft:wooden_axe; minecraft:stone_axe; minecraft:iron_axe; minecraft:golden_axe; minecraft:diamond_axe
-        S:shearsIDList=minecraft:shears
-
-        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
-        B:overrideIMC=false
-
-        vanilla_acacia {
-            S:logs=minecraft:log2, 0 % 4
-            S:leaves=minecraft:leaves2, 0 % 8
-        }
-
-        vanilla_birch {
-            S:logs=minecraft:log, 2 % 4
-            S:leaves=minecraft:leaves, 2 % 8
-        }
-
-        vanilla_dark_oak {
-            S:logs=minecraft:log2, 1
-            S:leaves=minecraft:leaves2, 1
-        }
-
-        vanilla_future_tree_1 {
-            S:logs=minecraft:log2, 2 % 4
-            S:leaves=minecraft:leaves2, 2 % 8
-        }
-
-        vanilla_future_tree_2 {
-            S:logs=minecraft:log2, 3 % 4
-            S:leaves=minecraft:leaves2, 3 % 8
-        }
-
-        vanilla_huge_brown_mushroom {
-            S:logs=minecraft:brown_mushroom_block, 10; minecraft:brown_mushroom_block, 15
-            S:leaves=minecraft:brown_mushroom_block, 1; minecraft:brown_mushroom_block, 2; minecraft:brown_mushroom_block, 3; minecraft:brown_mushroom_block, 4; minecraft:brown_mushroom_block, 5; minecraft:brown_mushroom_block, 6; minecraft:brown_mushroom_block, 7; minecraft:brown_mushroom_block, 8; minecraft:brown_mushroom_block, 9; minecraft:brown_mushroom_block, 14
-            B:requireLeafDecayCheck=false
-            I:maxHorLeafBreakDist=6
-        }
-
-        vanilla_huge_red_mushroom {
-            S:logs=minecraft:red_mushroom_block, 10; minecraft:red_mushroom_block, 15
-            S:leaves=minecraft:red_mushroom_block, 1; minecraft:red_mushroom_block, 2; minecraft:red_mushroom_block, 3; minecraft:red_mushroom_block, 4; minecraft:red_mushroom_block, 5; minecraft:red_mushroom_block, 6; minecraft:red_mushroom_block, 7; minecraft:red_mushroom_block, 8; minecraft:red_mushroom_block, 9; minecraft:red_mushroom_block, 14
-            B:requireLeafDecayCheck=false
-            I:maxHorLeafBreakDist=6
-        }
-
-        vanilla_jungle {
-            S:logs=minecraft:log, 3 % 4
-            S:leaves=minecraft:leaves, 3 % 8; minecraft:leaves, 0 % 8
-            B:requireLeafDecayCheck=false
-            I:maxHorLeafBreakDist=6
-        }
-
-        vanilla_oak {
-            S:logs=minecraft:log, 0 % 4
-            S:leaves=minecraft:leaves, 0 % 8
-        }
-
-        vanilla_spruce {
-            S:logs=minecraft:log, 1 % 4
-            S:leaves=minecraft:leaves, 1 % 8
-        }
-
-    }
-
-    ic2 {
-        S:modID=IC2
-        S:axeIDList=IC2:itemToolBronzeAxe; IC2:itemToolChainsaw
-        S:shearsIDList=IC2:itemToolChainsaw
-
-        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
-        B:overrideIMC=false
-
-        ic2_rubber_tree {
-            S:logs=IC2:blockRubWood
-            S:leaves=IC2:blockRubLeaves
-        }
-
-    }
-
-    tconstruct {
-        S:modID=TConstruct
-        S:axeIDList=TConstruct:hatchet; TConstruct:mattock; TConstruct:lumberaxe
-        S:shearsIDList=
-
-        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
-        B:overrideIMC=false
-    }
-
     thaumcraft {
         S:axeIDList=Thaumcraft:ItemAxeThaumium; Thaumcraft:ItemAxeElemental
         S:modID=Thaumcraft
@@ -399,6 +299,94 @@ tree_and_mod_configs {
         tf_transformation {
             S:leaves=TwilightForest:tile.TFMagicLeaves, 1 % 8
             S:logs=TwilightForest:tile.TFMagicLog, 1 % 4; TwilightForest:tile.TFMagicLogSpecial, 1 % 4
+        }
+
+    }
+
+    ##########################################################################################################
+    # 1_vanilla_trees_and_items
+    #--------------------------------------------------------------------------------------------------------#
+    # This special category is the home of the vanilla tree block and item configurations. You can change the 
+    # values in this category to suit your preferences.
+    # 
+    # WARNING: This config category must not be removed! If this category is renamed or removed Treecapitator 
+    # will assume your config file is new and reload the default user mod config settings!
+    ##########################################################################################################
+
+    1_vanilla_trees_and_items {
+        M:modID=minecraft
+        S:axeIDList=minecraft:wooden_axe; minecraft:stone_axe; minecraft:iron_axe; minecraft:golden_axe; minecraft:diamond_axe
+        S:shearsIDList=minecraft:shears
+
+        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
+        B:overrideIMC=false
+
+        vanilla_acacia {
+            S:logs=minecraft:log2, 0 % 4
+            S:leaves=minecraft:leaves2, 0 % 8
+        }
+
+        vanilla_birch {
+            S:logs=minecraft:log, 2 % 4
+            S:leaves=minecraft:leaves, 2 % 8
+        }
+
+        vanilla_dark_oak {
+            S:logs=minecraft:log2, 1
+            S:leaves=minecraft:leaves2, 1
+        }
+
+        vanilla_future_tree_1 {
+            S:logs=minecraft:log2, 2 % 4
+            S:leaves=minecraft:leaves2, 2 % 8
+        }
+
+        vanilla_future_tree_2 {
+            S:logs=minecraft:log2, 3 % 4
+            S:leaves=minecraft:leaves2, 3 % 8
+        }
+
+        vanilla_huge_brown_mushroom {
+            S:logs=minecraft:brown_mushroom_block, 10; minecraft:brown_mushroom_block, 15
+            S:leaves=minecraft:brown_mushroom_block, 1; minecraft:brown_mushroom_block, 2; minecraft:brown_mushroom_block, 3; minecraft:brown_mushroom_block, 4; minecraft:brown_mushroom_block, 5; minecraft:brown_mushroom_block, 6; minecraft:brown_mushroom_block, 7; minecraft:brown_mushroom_block, 8; minecraft:brown_mushroom_block, 9; minecraft:brown_mushroom_block, 14
+
+            # Optional
+            B:requireLeafDecayCheck=false
+
+            # Optional
+            I:maxHorLeafBreakDist=6
+        }
+
+        vanilla_huge_red_mushroom {
+            S:logs=minecraft:red_mushroom_block, 10; minecraft:red_mushroom_block, 15
+            S:leaves=minecraft:red_mushroom_block, 1; minecraft:red_mushroom_block, 2; minecraft:red_mushroom_block, 3; minecraft:red_mushroom_block, 4; minecraft:red_mushroom_block, 5; minecraft:red_mushroom_block, 6; minecraft:red_mushroom_block, 7; minecraft:red_mushroom_block, 8; minecraft:red_mushroom_block, 9; minecraft:red_mushroom_block, 14
+
+            # Optional
+            B:requireLeafDecayCheck=false
+
+            # Optional
+            I:maxHorLeafBreakDist=6
+        }
+
+        vanilla_jungle {
+            S:logs=minecraft:log, 3 % 4
+            S:leaves=minecraft:leaves, 3 % 8; minecraft:leaves, 0 % 8
+
+            # Optional
+            B:requireLeafDecayCheck=false
+
+            # Optional
+            I:maxHorLeafBreakDist=6
+        }
+
+        vanilla_oak {
+            S:logs=minecraft:log, 0 % 4
+            S:leaves=minecraft:leaves, 0 % 8
+        }
+
+        vanilla_spruce {
+            S:logs=minecraft:log, 1 % 4
+            S:leaves=minecraft:leaves, 1 % 8
         }
 
     }
@@ -568,6 +556,45 @@ tree_and_mod_configs {
 
             # Optional
             I:maxHorLeafBreakDist=5
+        }
+
+    }
+
+    tconstruct {
+        M:modID=TConstruct
+        S:axeIDList=TConstruct:hatchet; TConstruct:mattock; TConstruct:lumberaxe
+        S:shearsIDList=
+
+        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
+        B:overrideIMC=false
+    }
+
+    ic2 {
+        M:modID=IC2
+        S:axeIDList=IC2:itemToolBronzeAxe; IC2:itemToolChainsaw
+        S:shearsIDList=IC2:itemToolChainsaw
+
+        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
+        B:overrideIMC=false
+
+        ic2_rubber_tree {
+            S:logs=IC2:blockRubWood
+            S:leaves=IC2:blockRubLeaves
+        }
+
+    }
+
+    minefactoryreloaded {
+        M:modID=MineFactoryReloaded
+        S:axeIDList=
+        S:shearsIDList=
+
+        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
+        B:overrideIMC=false
+
+        minefactoryreloaded_rubberwood_log_1 {
+            S:logs=MineFactoryReloaded:rubberwood.log, 1 % 4
+            S:leaves=MineFactoryReloaded:rubberwood.leaves, 0 % 8
         }
 
     }
