--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -119,6 +119,21 @@ advgenerators {
 }
 
 
+agriculture {
+    B:brewer=false
+    B:cinnamon=false
+    B:counter=false
+    B:frier=false
+    B:icebox=false
+    B:oven=false
+    B:peanut=false
+    B:processor=false
+    B:salt=true
+    B:strawberry=false
+    B:vanilla=false
+}
+
+
 aobd {
     B:blockElnTungsten=true
     B:blockIridium=true
@@ -284,6 +299,11 @@ arsmagica2 {
     B:witchwoodDoubleSlab=true
     B:witchwoodSingleSlab=false
     B:wizardChalk=false
+}
+
+
+autofood {
+    B:autofoodmachine=false
 }
 
 
@@ -7468,6 +7488,11 @@ ic2nuclearcontrol {
     B:blockNuclearControlMain.8=false
     B:blockNuclearControlMain.9=false
     B:networkLink=false
+}
+
+
+iguanatweakstconstruct {
+    B:skullBlock=false
 }
 
 
