--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -18,8 +18,8 @@ command
 
 inventory
 {
-	cheatmode=2
-	gamemodes=creative
+	cheatmode=0
+	gamemodes=creative, creative+
 	hidden=false
 	itemIDs=1
 	itemsort=nei.itemsort.minecraft,nei.itemsort.mod,nei.itemsort.id,nei.itemsort.default,nei.itemsort.damage,nei.itemsort.name
