--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -6192,6 +6192,12 @@ flansmod {
 }
 
 
+fodc {
+    B:oreAutoconverter=false
+    B:oreConvTable=true
+}
+
+
 forbiddenmagic {
     B:ArcaneCake=false
     B:InkFlower=false
