--- a/config/DefenseTech.cfg
+++ b/config/DefenseTech.cfg
@@ -1,15 +1,15 @@
 # Configuration file
 
 "disable poison" {
-    B:"Disable Chemical"=true
-    B:"Disable Contagious"=true
+    B:"Disable Chemical"=false
+    B:"Disable Contagious"=false
 }
 
 
 explosives {
     B:antiBallistic=true
     B:antiGravitational=true
-    B:antimatter=false
+    B:antimatter=true
     B:anvil=true
     B:attractive=true
     B:breaching=true
@@ -28,7 +28,7 @@ explosives {
     B:missileModule=true
     B:nuclear=true
     B:nuclearCluster=true
-    B:redMatter=false
+    B:redMatter=true
     B:rejuvenation=true
     B:repulsive=true
     B:sMine=true
@@ -40,18 +40,18 @@ explosives {
 
 general {
     B:"Allow Chunk Loading"=true
-    B:"Antimatter Destroy Bedrock"=false
-    I:"Antimatter Explosion Size"=55
+    B:"Antimatter Destroy Bedrock"=true
+    I:"Antimatter Explosion Size"=100
     B:"Creepers Blow up in Fire"=true
     B:"Creepers Drop Sulfur"=true
     B:"Exothermic Create Netherrack"=true
     B:"Generate Sulfur Ore"=false
-    I:"Max Missile Distance"=10000
+    I:"Max Missile Distance"=100000
     B:"Pollutive Nuclear"=true
-    I:"RedMatter Life Span in ticks"=3600
+    I:"RedMatter Life Span in ticks"=36000
     B:"RedMatter despawn"=true
     D:"Reduce Obsidian Resistance"=45.0
-    I:"Rocket Launcher Max Missile Tier"=2
+    I:"Rocket Launcher Max Missile Tier"=4
     B:"Use Fuel"=true
 }
 
