--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created 28.des.2016 23:53:48
+; created 03.jan.2017 21:21:50
 ;---
 
 ; Settings which have some effect on gameplay or visuals.
