--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -31,7 +31,7 @@ inventory
 	profileRecipes=false
 	searchmode=1
 	utilities=delete, magnet, time, rain, heal, creative, creative+, adventure, enchant, potion, item
-	widgetsenabled=true
+	widgetsenabled=false
 }
 
 keys
