--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -439,6 +439,9 @@ wellofsufferingblacklist {
     B:Chicken=false
     B:Cow=false
     B:Creeper=false
+    B:DraconicEvolution.ChaosCrystal=false
+    B:DraconicEvolution.ChaosGuardian=false
+    B:DraconicEvolution.EnderDragon=false
     B:EAReplicator=false
     B:EnderDragon=false
     B:Enderman=false
@@ -489,9 +492,11 @@ wellofsufferingblacklist {
     B:Natura.NitroCreeper=false
     B:NetherOres.netherOresHellfish=false
     B:NightCrawler=false
+    B:NuclearMonster=false
     B:OpenBlocks.Luggage=false
     B:OpenBlocks.MiniMe=false
     B:Ozelot=false
+    B:Paul=false
     B:Pig=false
     B:PigZombie=false
     B:PneumaticCraft.Drone=false
