--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -137,6 +137,7 @@ agriculture {
 aobd {
     B:blockElnTungsten=true
     B:blockIridium=true
+    B:blockPlutonium=true
 }
 
 
@@ -5265,6 +5266,7 @@ denseores {
     B:block0.6=true
     B:block0.7=true
     B:block0.8=true
+    B:block0.9=true
     B:block1=true
     B:block1.1=true
     B:block1.2=true
@@ -5299,6 +5301,54 @@ desertcraft {
 doge {
     B:dogeBlock=true
     B:miningRig=false
+}
+
+
+draconicevolution {
+    B:cKeyStone=false
+    B:chaosCrystal=false
+    B:chaosShardAtmos=false
+    B:customSpawner=false
+    B:dislocatorReceptacle=false
+    B:dissEnchanter=false
+    B:draconicBlock=true
+    B:draconium=true
+    B:draconium.1=false
+    B:draconium.2=true
+    B:draconiumChest=false
+    B:draconiumOre=true
+    B:energyCrystal=false
+    B:energyCrystal.1=false
+    B:energyCrystal.2=false
+    B:energyCrystal.3=false
+    B:energyCrystal.4=false
+    B:energyCrystal.5=false
+    B:energyInfuser=false
+    B:energyPylon=true
+    B:energyStorageCore=false
+    B:flowGate=false
+    B:flowGate.6=false
+    B:generator=false
+    B:grinder=false
+    B:infusedObsidian=true
+    B:invisibleMultiblock=false
+    B:longRangeDislocator.1=true
+    B:particleGenerator=false
+    B:placedItem=false
+    B:playerDetector=false
+    B:playerDetectorAdvanced=false
+    B:portal=false
+    B:potentiometer=false
+    B:rainSensor=false
+    B:reactorCore=false
+    B:reactorEnergyInjector=false
+    B:reactorStabilizer=false
+    B:safetyFlame=false
+    B:sunDial=false
+    B:teleporterStand=false
+    B:upgradeModifier=false
+    B:weatherController=false
+    B:xRayBlock=true
 }
 
 
@@ -6163,10 +6213,25 @@ extrautilities {
 
 
 factorization {
+    B:ArtifactForge=false
+    B:BlastBlock=true
+    B:BlastedBedrock=true
+    B:BlockMatcher=true
+    B:ColossalBlock=true
+    B:ColossalBlock.1=true
+    B:ColossalBlock.2=true
+    B:ColossalBlock.3=true
+    B:ColossalBlock.4=true
+    B:ColossalBlock.5=true
+    B:ColossalBlock.6=false
+    B:ColossalBlock.7=true
+    B:ColossalBlock.9=true
     B:DarkIronOre=false
     B:FracturedBedrock=true
     B:FzBlock.15=false
+    B:GargantuanBlock=true
     B:Lightair=false
+    B:MantleRock=true
     B:ResourceBlock=true
     B:ResourceBlock.1=true
     B:ResourceBlock.2=true
@@ -8964,6 +9029,127 @@ nedocomputers {
 netherores {
     B:tilenetheroresore0=true
     B:tilenetheroresore1=true
+}
+
+
+nuclearcraft {
+    B:AmRTG=false
+    B:CfRTG=false
+    B:EMP=true
+    B:EMPE=true
+    B:RTG=false
+    B:WRTG=false
+    B:antimatterBomb=true
+    B:antimatterBombE=true
+    B:assemblerActive=false
+    B:assemblerIdle=false
+    B:blastBlock=true
+    B:blockBlock=true
+    B:blockBlock.1=true
+    B:blockBlock.10=true
+    B:blockBlock.2=true
+    B:blockBlock.3=true
+    B:blockBlock.4=true
+    B:blockBlock.5=true
+    B:blockBlock.6=true
+    B:blockBlock.7=true
+    B:blockBlock.8=true
+    B:blockBlock.9=true
+    B:blockOre=true
+    B:blockOre.1=true
+    B:blockOre.2=true
+    B:blockOre.3=true
+    B:blockOre.4=true
+    B:blockOre.5=true
+    B:blockOre.6=true
+    B:blockOre.7=true
+    B:blockOre.8=true
+    B:blockOre.9=true
+    B:cellBlock=false
+    B:collectorActive=false
+    B:collectorIdle=false
+    B:coolantCoolerBlock=true
+    B:coolerActive=false
+    B:coolerBlock=true
+    B:coolerIdle=false
+    B:crusherActive=false
+    B:crusherIdle=false
+    B:cryotheumCoolerBlock=true
+    B:denseSteamBlock=false
+    B:denseSteamDecompressor=false
+    B:electricCrusherActive=false
+    B:electricCrusherIdle=false
+    B:electricFurnaceActive=false
+    B:electricFurnaceIdle=false
+    B:electrolyserActive=false
+    B:electrolyserIdle=false
+    B:electromagnetActive=false
+    B:electromagnetIdle=false
+    B:emptyCoolerBlock=true
+    B:enderiumCoolerBlock=true
+    B:factoryActive=false
+    B:factoryIdle=false
+    B:fissionReactorGraphiteActive=false
+    B:fissionReactorGraphiteIdle=false
+    B:fissionReactorSteamActive=false
+    B:fissionReactorSteamIdle=false
+    B:furnaceActive=false
+    B:furnaceIdle=false
+    B:fusionConnector=true
+    B:fusionPlasmaBlock=false
+    B:fusionReactor=false
+    B:fusionReactorBlock=false
+    B:fusionReactorBlockTop=false
+    B:fusionReactorSteam=false
+    B:fusionReactorSteamBlock=false
+    B:fusionReactorSteamBlockTop=false
+    B:glowstoneCoolerBlock=true
+    B:graphiteBlock=true
+    B:hastenerActive=false
+    B:hastenerIdle=false
+    B:heliumCoolerBlock=true
+    B:heliumExtractorActive=false
+    B:heliumExtractorIdle=false
+    B:ioniserActive=false
+    B:ioniserIdle=false
+    B:irradiatorActive=false
+    B:irradiatorIdle=false
+    B:liquidHeliumBlock=false
+    B:lithiumIonBatteryBlock=false
+    B:machineBlockNC=true
+    B:nuclearFurnaceActive=false
+    B:nuclearFurnaceIdle=false
+    B:nuclearWorkspace=false
+    B:nuke=true
+    B:nukeE=true
+    B:oxidiserActive=false
+    B:oxidiserIdle=false
+    B:reactionGeneratorActive=false
+    B:reactionGeneratorIdle=false
+    B:reactorBlock=true
+    B:recyclerActive=false
+    B:recyclerIdle=false
+    B:redstoneCoolerBlock=true
+    B:separatorActive=false
+    B:separatorIdle=false
+    B:simpleQuantumDown=false
+    B:simpleQuantumUp=false
+    B:solarPanel=false
+    B:speedBlock=true
+    B:steamBlock=false
+    B:steamDecompressor=false
+    B:steamGenerator=false
+    B:superElectromagnetActive=false
+    B:superElectromagnetIdle=false
+    B:supercoolerActive=false
+    B:supercoolerIdle=false
+    B:superdenseSteamBlock=false
+    B:synchrotronActive=false
+    B:synchrotronIdle=false
+    B:tubing1=false
+    B:tubing2=false
+    B:voltaicPile=false
+    B:waterCoolerBlock=true
 }
 
 
