--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -444,6 +444,18 @@ shedding {
     I:CreeperBoss.metadata=0
     I:CreeperBoss.rate=-1
 
+    # Configuration of Shedding for DraconicEvolution.ChaosGuardian
+    S:DraconicEvolution.ChaosGuardian.item=
+    I:DraconicEvolution.ChaosGuardian.lexiconDisplaySize=40
+    I:DraconicEvolution.ChaosGuardian.metadata=0
+    I:DraconicEvolution.ChaosGuardian.rate=-1
+
+    # Configuration of Shedding for DraconicEvolution.EnderDragon
+    S:DraconicEvolution.EnderDragon.item=
+    I:DraconicEvolution.EnderDragon.lexiconDisplaySize=40
+    I:DraconicEvolution.EnderDragon.metadata=0
+    I:DraconicEvolution.EnderDragon.rate=-1
+
     # Configuration of Shedding for EAReplicator
     S:EAReplicator.item=
     I:EAReplicator.lexiconDisplaySize=40
@@ -673,8 +685,6 @@ shedding {
     I:MushroomCow.lexiconDisplaySize=40
     I:MushroomCow.metadata=0
     I:MushroomCow.rate=-1
-
-    # Configuration of Shedding for Mystcraft.myst.book
     S:Mystcraft.myst.book.item=
     I:Mystcraft.myst.book.lexiconDisplaySize=40
     I:Mystcraft.myst.book.metadata=0
@@ -714,6 +724,12 @@ shedding {
     I:NightCrawler.metadata=0
     I:NightCrawler.rate=-1
 
+    # Configuration of Shedding for NuclearMonster
+    S:NuclearMonster.item=
+    I:NuclearMonster.lexiconDisplaySize=40
+    I:NuclearMonster.metadata=0
+    I:NuclearMonster.rate=-1
+
     # Configuration of Shedding for OpenBlocks.Luggage
     S:OpenBlocks.Luggage.item=
     I:OpenBlocks.Luggage.lexiconDisplaySize=40
@@ -731,6 +747,12 @@ shedding {
     I:Ozelot.lexiconDisplaySize=40
     I:Ozelot.metadata=0
     I:Ozelot.rate=-1
+
+    # Configuration of Shedding for Paul
+    S:Paul.item=
+    I:Paul.lexiconDisplaySize=40
+    I:Paul.metadata=0
+    I:Paul.rate=-1
 
     # Configuration of Shedding for Pig
     S:Pig.item=
