--- a/config/buildcraft/compat.cfg
+++ b/config/buildcraft/compat.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 balance {
+    # Should Builders place (pre-configured) Servo Rails? [default: true]
     B:builderServoRails=true
 }
 
