--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -45,6 +45,7 @@ Whitelist {
     B:damascus.steel.molten=true
     B:dark.steel.molten=true
     B:deep.iron.molten=true
+    B:densesteam=true
     B:desichalkos.molten=true
     B:diesel=true
     B:electrical.steel.molten=true
@@ -64,6 +65,7 @@ Whitelist {
     B:fluxgoo=true
     B:for.honey=true
     B:fuel=true
+    B:fusionplasma=true
     B:glass=true
     B:glass.molten=true
     B:glowstone=true
@@ -162,6 +164,7 @@ Whitelist {
     B:liquid_sunshine=true
     B:liquiddna=true
     B:liquidessence=true
+    B:liquidhelium=true
     B:lpg=true
     B:lubricant=true
     B:ludicrite.molten=true
@@ -224,6 +227,7 @@ Whitelist {
     B:steam=true
     B:steel.molten=true
     B:stone.seared=true
+    B:superdensesteam=true
     B:syngas=true
     B:tartarite.molten=true
     B:terrasteel.molten=true
