--- a/config/cofh/thermalexpansion/fuels.cfg
+++ b/config/cofh/thermalexpansion/fuels.cfg
@@ -9,6 +9,7 @@
 Coolants {
     I:cryotheum=4000000
     I:ice=2000000
+    I:liquidhelium=3000000
     I:water=400000
 }
 
@@ -65,7 +66,9 @@ Fuels {
     Reactant {
         I:biomass=450000
         I:creosote=200000
+        I:fusionplasma=600000
         I:glowstone=750000
+        I:liquidhelium=300000
         I:mobessence=500000
         I:redstone=600000
         I:seedoil=250000
