--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Wed Jan 04 20:48:49 CET 2017
+#Sat Apr 08 12:53:23 CEST 2017
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
