--- a/config/aobd.cfg
+++ b/config/aobd.cfg
@@ -196,6 +196,38 @@ Atlarus {
 }
 
 
+Boron {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x616161
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Boron
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
 Carmot {
     B:"Disable All"=false
     B:Eln=true
@@ -365,6 +397,38 @@ DeepIron {
     B:eng_toolbox=true
     B:exnihilo=true
     S:extra=DeepIron
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Draconium {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0xb39cca
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Draconium
     B:factorization=true
     B:ganysnether=true
     B:modularsystems=true
@@ -829,6 +893,70 @@ Lemurite {
 }
 
 
+Lithium {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x8b8b8b
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Lithium
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Magnesium {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0xdbccd3
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Magnesium
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
 Manganese {
     B:"Disable All"=false
     B:Eln=true
@@ -993,6 +1121,38 @@ Nickel {
 }
 
 
+Obsidian {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x664a95
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Obsidian
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
 Orichalcum {
     B:"Disable All"=false
     B:Eln=true
@@ -1117,6 +1277,38 @@ Platinum {
     B:eng_toolbox=true
     B:exnihilo=true
     S:extra=Platinum
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Plutonium {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x372d92
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Plutonium
     B:factorization=true
     B:ganysnether=true
     B:modularsystems=true
@@ -1372,6 +1564,38 @@ Steel {
     B:eng_toolbox=true
     B:exnihilo=true
     S:extra=Steel
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Thorium {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x1d1d1d
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Thorium
     B:factorization=true
     B:ganysnether=true
     B:modularsystems=true
