--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Wed Jan 04 20:47:31 CET 2017
+#Sat Apr 08 12:51:56 CEST 2017
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
