--- a/config/Natura.cfg
+++ b/config/Natura.cfg
@@ -21,7 +21,7 @@ disabler {
     B:"Generate Hopseed Trees"=true
     B:"Generate Maloberry Bushes"=true
     B:"Generate Maple Trees"=true
-    B:"Generate Overworld Clouds"=true
+    B:"Generate Overworld Clouds"=false
     B:"Generate Raspberry Bushes"=true
     B:"Generate Redwood Trees"=true
     B:"Generate Saguaro Cactus"=true
@@ -30,7 +30,7 @@ disabler {
     B:"Generate Skyberry Bushes"=true
     B:"Generate Small Eucalyptus Trees"=true
     B:"Generate Stingberry Bushes"=true
-    B:"Generate Sulfur Clouds"=false
+    B:"Generate Sulfur Clouds"=true
     B:"Generate Thornvines"=true
     B:"Generate Tigerwood Trees"=true
     B:"Generate Willow Trees"=true
