--- a/config/extrabiomes.cfg
+++ b/config/extrabiomes.cfg
@@ -217,7 +217,7 @@ decoration {
 general {
     # Set to false to enable console commands.
     B:DisableConsoleCommands=true
-    B:GenerateLegendOaks=true
+    B:GenerateLegendOaks=false
 
     # Setting relative sapling drops to true will decrease the amount of saplings dropped by decaying fir and redwood leaf blocks to a more reasonable amount.
     B:"Relative sapling drops"=false
