--- a/config/FoodExpansion.cfg
+++ b/config/FoodExpansion.cfg
@@ -41,8 +41,8 @@ general {
     ##########################################################################################################
 
     "disable mobdrops" {
-        B:"If set to true, bats are not allowed to drop Bat Wings"=false
-        B:"If set to true, horses are not allowed to drop Horse Meat"=false
+        B:"If set to true, bats are not allowed to drop Bat Wings"=True
+        B:"If set to true, horses are not allowed to drop Horse Meat"=True
         B:"If set to true, sheep are not allowed to drop Mutton"=True
         B:"If set to true, squids are not allowed to drop Squid Meat"=True
     }
