--- a/config/aroma1997/AromaBackup.cfg
+++ b/config/aroma1997/AromaBackup.cfg
@@ -2,27 +2,26 @@
 
 general {
     # If all players or only admins can use the /backup command.
-    B:allPlayers=false
+    B:allPlayers=true
 
     # If the blacklist is enabled, the dimensions (ids) specified here will not be backed up.
     I:blacklist <
      >
 
     # Compression rate. Has to be between 9 (high compression) and 1 (low compression).
-    I:compressionRate=3
+    I:compressionRate=5
 
     # How frequently a automatic backup is done in minutes. 0 means Auto-Backup disabled.
-    I:delay=60
+    I:delay=30
 
     # How many backups are kept. 0 means infinite
-    I:keep=2
+    I:keep=20
 
     # Where to store the Backups. Either an absolute path or relative to the minecraft folder.
     S:location=./backups
-    B:onShutdown=false
 
     # If a backup should be done when the world gets loaded.
-    B:onStartup=false
+    B:onStartup=true
 
     # If the scheduled backup should be skipped if no players were on the server since the last one.
     B:skipbackup=true
