--- a/config/Thaumcraft.cfg
+++ b/config/Thaumcraft.cfg
@@ -87,7 +87,7 @@ general {
     B:hard_mode_nodes=true
 
     # How rare nodes are in the world. The number means there will be (on average) one node per N chunks.
-    I:node_rarity=36
+    I:node_rarity=64
 
     # Determines how fast notifications scroll downwards.
     I:notification_delay=5000
@@ -184,8 +184,8 @@ world_generation {
     B:generate_structures=true
 
     # Can taint biomes generate at worldgen
-    B:generate_taint=true
-    B:generate_trees=true
+    B:generate_taint=false
+    B:generate_trees=false
 }
 
 
