--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -47,7 +47,7 @@ dimblacklist {
     B:genOresFlat=false
 
     # True: slime islands generate in overworld; False they do not generate
-    B:slimeIslGenDim0=true
+    B:slimeIslGenDim0=false
 }
 
 
@@ -70,7 +70,7 @@ experimental {
 
 general {
     # You will always get a TConstruct item from casting an ingot or block.
-    B:"Always cast TConstruct ingots"=true
+    B:"Always cast TConstruct ingots"=false
     I:"Sea level"=64
 }
 
