--- a/config/extrabiomes.cfg
+++ b/config/extrabiomes.cfg
@@ -111,6 +111,7 @@ biome {
     B:vanilla.forest.enablegeneration=true
     B:vanilla.jungle.allowvillages=true
     B:vanilla.jungle.enablegeneration=true
+    B:vanilla.roofedforest.enablegeneration=false
     B:vanilla.ocean.allowvillages=true
     B:vanilla.ocean.enablegeneration=true
     B:vanilla.plains.allowvillages=true
