--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -35,7 +35,7 @@ general {
     B:EnableWorldRegeneration=false
     D:EnergyPerHeat=1000.0
     D:EnergyPerRedstone=10000.0
-    S:EnergyType=J
+    S:EnergyType=RF
     I:EthyleneBurnTime=40
     D:EvaporationHeatDissipation=0.02
     D:EvaporationMaxTemp=3000.0
@@ -75,7 +75,7 @@ general {
     B:UpdateNotifications=true
     I:UpgradeModifier=10
     I:VoicePort=36123
-    B:VoiceServerEnabled=true
+    B:VoiceServerEnabled=false
     I:WorldRegenVersion=0
 }
 
