Dump from 2.1.1a beta
Optimized eln and dump from 2.1.1a beta to add new config files and update existing ones

--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -8,6 +8,9 @@ balancing {
     # Maximum horizontal distance from autominer that will be mined
     I:autominerRange=10
     D:batteryCapacityFactor=1.0
+
+    # Multiplication factor for cable power capacity. We recommend 2.0 to 4.0 for larger modpacks, but 1.0 for Eln standalone, or if you like a challenge.
+    D:cablePowerFactor=3.0
     I:fuelGeneratorPowerFactor=1
     D:fuelHeatFurnacePowerFactor=1.0
 
@@ -15,6 +18,7 @@ balancing {
     D:fuelHeatValueFactor=6.75E-5
     I:heatTurbinePowerFactor=1
     I:platesPerIngot=1
+    D:shaftEnergyFactor=0.05
     I:solarPanelPowerFactor=1
 
     # Display more detailed WAILA info on some machines
@@ -38,6 +42,7 @@ compatibility {
 
 debug {
     B:enable=false
+    D:maxSoundDistance=16.0
 }
 
 
@@ -50,6 +55,7 @@ dictionary {
 entity {
     B:killMonstersAroundLamps=true
     I:killMonstersAroundLampsRange=9
+    I:maxReplicators=100
     I:replicatorId=-1
     B:replicatorPop=true
     D:replicatorPopWhenThunderPerSecond=0.008333333333333333
@@ -67,9 +73,20 @@ gameplay {
 
 
 general {
-    B:analyticsEnable=true
-    S:playerUUID=f26d6ce1-bafe-4674-a766-a86df2f046de
-    B:versionCheckEnable=false
+    # Enable Analytics for Electrical Age
+    B:analyticsEnable=false
+
+    # Opt into sending player UUID when sending analytics (default DISABLED)
+    B:analyticsPlayerOptIn=false
+
+    # Set update checker URL
+    S:analyticsURL=http://eln.ja13.org/stat
+    B:noSymbols=false
+    B:noVoltageBackground=false
+    S:playerUUID=3bfb0d34-4dab-4271-aa46-5bb0562d4a1c
+
+    # Enable version checker
+    B:versionCheckEnable=true
 }
 
 
@@ -98,7 +115,6 @@ modbus {
 
 
 simulation {
-    D:cableRsFactor=1.0
     I:electricalFrequency=20
     I:electricalInterSystemOverSampling=50
     I:thermalFrequency=400
