--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -28,6 +28,10 @@ Whitelist {
     B:blue.alloy.molten=true
     B:blutonium.molten=true
     B:brass.molten=true
+    B:brine1=true
+    B:brine2=true
+    B:brine3=true
+    B:brine4=true
     B:bronze.molten=true
     B:carmot.molten=true
     B:celenegil.molten=true
