--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Wed Sep 18 15:30:34 CEST 2019
+#Fri Jan 17 16:58:56 CET 2020
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
