--- a/config/reccomplex.cfg
+++ b/config/reccomplex.cfg
@@ -55,6 +55,7 @@ balancing {
 
 
 controls {
+    # The key to be held when you want to make a secondary selection with block selectors [default: ctrl]
     S:blockSelectorModifierKeys=ctrl
 }
 
@@ -72,6 +73,7 @@ general {
 
 
 visual {
+    # Only show the edges of negative space blocks? (Improves performance in big builds) [default: true]
     B:hideRedundantNegativeSpace=true
 }
 
