--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Wed Sep 18 15:28:55 CEST 2019
+#Fri Jan 17 16:57:23 CET 2020
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
