--- a/config/dynamictrees.cfg
+++ b/config/dynamictrees.cfg
@@ -47,7 +47,7 @@ world {
     B:vineGen=true
 
     # World Generation produces Dynamic Trees instead of Vanilla trees. [default: true]
-    B:worldGen=true
+    B:worldGen=false
 }
 
 
