--- a/config/InfernalMobs.cfg
+++ b/config/InfernalMobs.cfg
@@ -2,23 +2,23 @@
 
 entitiesalwaysinfernal {
     B:EntityBabySkeleton=false
-    B:EntityBasalz=false
-    B:EntityBlizz=false
-    B:EntityConcussionCreeper=false
-    B:EntityCreeper=false
-    B:EntityMobEnderman=false
-    B:EntitySkeleton=false
+    B:EntityBasalz=true
+    B:EntityBlizz=true
+    B:EntityConcussionCreeper=true
+    B:EntityCreeper=true
+    B:EntityMobEnderman=true
+    B:EntitySkeleton=true
     B:EntitySlime=false
-    B:EntitySpider=false
+    B:EntitySpider=true
     B:EntityWitch=false
-    B:EntityZombie=false
+    B:EntityZombie=true
 }
 
 
 entitybasehealth {
-    D:EntityCreeper=20.0
-    D:EntityMobEnderman=44.0
-    D:EntitySkeleton=20.0
+    D:EntityCreeper=40.0
+    D:EntityMobEnderman=88.0
+    D:EntitySkeleton=40.0
 }
 
 
@@ -58,9 +58,9 @@ general {
     S:droppedItemIDsUltra=bow,iron_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,iron_helmet,iron_chestplate,iron_leggings,iron_boots,golden_helmet,golden_chestplate,golden_leggings,golden_boots,golden_apple,blaze_powder-0-3,enchanted_book
     I:eliteRarity=15
     I:infernoRarity=7
-    D:maxOneShotDamage=10.0
+    D:maxOneShotDamage=20.0
     D:mobFarmDamageThreshold=150.0
-    S:mobHealthFactor=1.0
+    S:mobHealthFactor=2.0
     I:ultraRarity=7
     B:useSimpleEntityClassnames=true
 }
