--- a/config/InfernalMobs.cfg
+++ b/config/InfernalMobs.cfg
@@ -2,16 +2,16 @@
 
 entitiesalwaysinfernal {
     B:EntityBabySkeleton=false
-    B:EntityBasalz=true
-    B:EntityBlizz=true
-    B:EntityConcussionCreeper=true
-    B:EntityCreeper=true
-    B:EntityMobEnderman=true
-    B:EntitySkeleton=true
+    B:EntityBasalz=false
+    B:EntityBlizz=false
+    B:EntityConcussionCreeper=false
+    B:EntityCreeper=false
+    B:EntityMobEnderman=false
+    B:EntitySkeleton=false
     B:EntitySlime=false
-    B:EntitySpider=true
+    B:EntitySpider=false
     B:EntityWitch=false
-    B:EntityZombie=true
+    B:EntityZombie=false
 }
 
 
@@ -52,16 +52,16 @@ general {
     B:"MM_Weakness enabled"=true
     B:"MM_Webber enabled"=true
     B:"MM_Wither enabled"=true
-    B:disableGUIoverlay=false
+    B:disableGUIoverlay=true
     S:droppedItemIDsElite=iron_shovel,iron_pickaxe,iron_axe,iron_sword,iron_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,iron_helmet,iron_chestplate,iron_leggings,iron_boots,cookie-0-6
     S:droppedItemIDsInfernal=diamond-0-3,diamond_sword,diamond_shovel,diamond_pickaxe,diamond_axe,diamond_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,diamond_helmet,diamond_chestplate,diamond_leggings,diamond_boots,ender_pearl,enchanted_book
     S:droppedItemIDsUltra=bow,iron_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,iron_helmet,iron_chestplate,iron_leggings,iron_boots,golden_helmet,golden_chestplate,golden_leggings,golden_boots,golden_apple,blaze_powder-0-3,enchanted_book
-    I:eliteRarity=15
-    I:infernoRarity=7
+    I:eliteRarity=2
+    I:infernoRarity=4
     D:maxOneShotDamage=20.0
     D:mobFarmDamageThreshold=150.0
     S:mobHealthFactor=2.0
-    I:ultraRarity=7
+    I:ultraRarity=3
     B:useSimpleEntityClassnames=true
 }
 
