--- a/config/enderzoo/EnderZoo.cfg
+++ b/config/enderzoo/EnderZoo.cfg
@@ -56,22 +56,22 @@ difficulty {
     B:enderZooDifficultyModifierEnabled=true
 
     # When in easy difficulty base attack damage is multiplied by this value
-    D:enderZooEasyAttackModifier=0.9
+    D:enderZooEasyAttackModifier=1
 
     # When in easy difficulty base health is multiplied by this value, rounded to the nearest whole 'heart'
-    D:enderZooEasyHealthModifier=0.9
+    D:enderZooEasyHealthModifier=1
 
     # When in easy difficulty base attack damage is multiplied by this value
-    D:enderZooHardAttackModifier=2.2
+    D:enderZooHardAttackModifier=4
 
     # When in hard mode base health is multiplied by this value, rounded to the nearest whole 'heart'
-    D:enderZooHardHealthModifier=2.2
+    D:enderZooHardHealthModifier=4
 
     # When in easy difficulty base attack damage is multiplied by this value
-    D:enderZooNormalAttackModifier=1.5
+    D:enderZooNormalAttackModifier=2
 
     # When in normal difficultry base health is multiplied by this value, rounded to the nearest whole 'heart'
-    D:enderZooNormalHealthModifier=1.5
+    D:enderZooNormalHealthModifier=2
 
     # When enabled health and base damage for all non Ender Zoo mobs will be modified based on difficulty [default: true]
     B:globalDifficultyModifierEnabled=true
