--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -57,7 +57,7 @@ entity {
     I:killMonstersAroundLampsRange=16
     I:maxReplicators=100
     I:replicatorId=-1
-    B:replicatorPop=true
+    B:replicatorPop=false
     D:replicatorPopWhenThunderPerSecond=0.008333333333333333
 }
 
