removed flux light

--- a/config/machinemuse/powersuits.cfg
+++ b/config/machinemuse/powersuits.cfg
@@ -77,7 +77,7 @@ modules {
     B:"Leaf Blower"=true
     B:"Lightning Summoner"=true
     B:"Liquid Nitrogen Cooling System"=true
-    B:"Lux Capacitor"=true
+    B:"Lux Capacitor"=false
     B:Magnet=true
     B:"Mechanical Assistance"=true
     B:"Melee Assist"=true
