removed recipe for forbidden fruit
its too op

--- a/config/FoodExpansion.cfg
+++ b/config/FoodExpansion.cfg
@@ -54,7 +54,7 @@ general {
     ##########################################################################################################
 
     general {
-        B:"Enable Recipe for the Forbidden Fruit (8 Notch Apples + 1 Diamond Block)"=true
+        B:"Enable Recipe for the Forbidden Fruit (8 Notch Apples + 1 Diamond Block)"=false
     }
 
 }
