removed prefilled tanks

--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -62,8 +62,8 @@ general {
     B:OpsBypassRestrictions=true
     B:OsmiumGenerationEnabled=true
     I:OsmiumPerChunk=16
-    B:PrefilledFluidTanks=true
-    B:PrefilledGasTanks=true
+    B:PrefilledFluidTanks=false
+    B:PrefilledGasTanks=false
     B:PumpWaterSources=false
     D:RFToJoules=0.4
     I:SaltPerChunk=2
