added enderio confics

--- a/config/powercrystals/minefactoryreloaded/common.cfg
+++ b/config/powercrystals/minefactoryreloaded/common.cfg
@@ -329,7 +329,7 @@ Machine {
 
 RecipeSets {
     # If true, MFR will register its EnderIO-based recipes.
-    B:EnderIO=false
+    B:EnderIO=true
 
     # If true, MFR will register its Thermal Expansion-based recipes.
     B:ThermalExpansion=true
