--- a/config/Titanpower.cfg
+++ b/config/Titanpower.cfg
@@ -1,5 +1,10 @@
 # Configuration file
 
+general {
+    B:Capes=true
+}
+
+
 generation {
     B:Oregeneration=true
 }
@@ -17,7 +22,7 @@ generation_end {
 
 generation_nether {
     B:BluradienGeneration=true
-    I:Bluradien_chance=1
+    I:Bluradien_chance=2
     I:Bluradien_maxveinsize=5
     I:Bluradien_maxy=120
     I:Bluradien_minveinsize=2
@@ -28,7 +33,7 @@ generation_nether {
 generation_world {
     B:BluradienOre=true
     I:Bluradien_chance=1
-    I:Bluradien_maxveinsize=3
+    I:Bluradien_maxveinsize=5
     I:Bluradien_maxy=40
     I:Bluradien_minveinsize=2
     I:Bluradien_miny=10
