--- a/config/ExtraPlanets.cfg
+++ b/config/ExtraPlanets.cfg
@@ -394,7 +394,7 @@ blocks {
     B:"Generate Sky Feature on Jupiter"=true
 
     # Setting this option to false will disable & remove Volcanos from generating on Venus
-    B:"Generate Volcanos on Venus"=true
+    B:"Generate Volcanos on Venus"=false
 
     # Changing this will change the Tier required to go to Mercury
     I:"Mercury Rocket required"=4
