--- a/config/craftpresence.properties
+++ b/config/craftpresence.properties
@@ -34,7 +34,7 @@ Default_Server_Name=Minecraft Server
 Singleplayer_Game_Message=Playing Singleplayer
 Refresh_Rate=2
 Player_Outer_Info_Placeholder=As &name&
-Small_Image_Key_Format=&SERVER&&PACK&
+Small_Image_Key_Format=&SERVER&
 Entity_Attacking_Messages=[default;Attacking &entity&]
 Loading_Message=Loading...
 Detect_Dimension_Data=true
@@ -73,5 +73,5 @@ Main_Menu_Message=In the Main Menu
 Large_Image_Key_Format=&MAINMENU&&DIMENSION&
 Modpack_Message=&name&
 Default\ Biome\ Icon=unknown
-Small_Image_Text_Format=&SERVER& &PACK&
+Small_Image_Text_Format=&SERVER&
 Enable_Join_Requests=false
