--- a/config/foamfix.cfg
+++ b/config/foamfix.cfg
@@ -17,16 +17,16 @@ bugfixes {
     B:entityHeldItemNBTRenderFix=true
 
     # Fix items bouncing around on locked hoppers. (from BugfixMod by williewillus)
-    B:itemBounceHopperFix=false
+    B:itemBounceHopperFix=true
 
     # Fix items bouncing around on stairs. (from BugfixMod by williewillus)
-    B:itemBounceStairFix=false
+    B:itemBounceStairFix=true
 
     # Fix native memory leak in JarDiscoverer (from Forkage by immibis)
     B:jarDiscovererMemoryLeakFix=true
 
     # Fix projectiles that deal 0 damage not knocking back players. (from BugfixMod by williewillus)
-    B:snowballFix=true
+    B:snowballFix=false
 
     # Fix sounds playing extra times when you close a GUI or unpause the game (from Forkage by immibis)
     B:soundSystemUnpauseFix=true
@@ -77,10 +77,10 @@ tweaks {
     B:arrowDing=false
 
     # Adds AI tasks that make chickens attracted to all items they can breed with, not just seeds. (from BugfixMod by williewillus)
-    B:chickenLureFix=false
+    B:chickenLureFix=true
 
     # Blacksmith houses generate with an anvil where there was a double stone slab (which was supposed to be an "anvil" anyway). (from BugfixMod by williewillus)
-    B:villageAnvils=false
+    B:villageAnvils=true
 }
 
 
