fix iron nugget

--- a/config/Netherlicious/Main_Configuration.cfg
+++ b/config/Netherlicious/Main_Configuration.cfg
@@ -23,7 +23,7 @@
 
 
 compatibility {
-    B:"Enable Recipe for Iron Nuggets. Disable if you already have Iron Nuggets from another Mod"=true
+    B:"Enable Recipe for Iron Nuggets. Disable if you already have Iron Nuggets from another Mod"=false
 }
 
 
