--- a/config/Netherlicious/Worldgeneration_Configuration.cfg
+++ b/config/Netherlicious/Worldgeneration_Configuration.cfg
@@ -19,8 +19,8 @@
 ore {
     B:"1 Generate Nether Quartz"=true
     B:"Generate Efrine Ore"=true
-    B:"Generate Nether Gold Ore"=true
-    B:"Generate Nether Iron Ore"=true
+    B:"Generate Nether Gold Ore"=false
+    B:"Generate Nether Iron Ore"=false
     B:"Generate Netherrack Void Quartz. This is independent from the Abyssal Shadowland generation of Void Quartz"=false
 }
 
