--- a/config/Netherlicious/Main_Configuration.cfg
+++ b/config/Netherlicious/Main_Configuration.cfg
@@ -52,7 +52,7 @@ misc {
 
 "textures and sound" {
     B:"Sound, 1 Use new Sounds for old and some modded Blocks"=true
-    B:"Texture, 1 Use new Textures for old and some modded Blocks"=true
+    B:"Texture, 1 Use new Textures for old and some modded Blocks"=false
     B:"Texture, Use alternative Soul Sandstone Textures by: DariusDarkBum"=false
     B:"Texture, Use alternative textures for regular Lanterns"=true
 }
