--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -8,7 +8,7 @@
 
 aurora {
     # Whether to enable Aurora processing on server/client [default: true]
-    B:Enabled=false
+    B:Enabled=true
 
     # Animate Aurora so it waves [default: true]
     B:Animate=true
