--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -219,7 +219,7 @@ sound {
     S:"Footsteps Sound Factor"=0.15
 
     # Enable sound effect when jumping [default: true]
-    B:"Jump Sound"=true
+    B:"Jump Sound"=false
 
     # Enable weapons swing sound effect when attacking [default: true]
     B:"Swing Sound"=true
