--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -53,7 +53,7 @@ Creeper {
     B:Breaching=true
 
     # AND HIS NAME IS... [default: false]
-    B:"Cena Creeper"=false
+    B:"Cena Creeper"=true
 
     # How rare are they [range: 0 ~ 2147483647, default: 9]
     I:"Cena Creeper Rarity"=9
@@ -83,7 +83,7 @@ Enderman {
     B:"Player Teleport"=true
 
     # Makes Endermen stalk players with side effects
-    B:Slender-Mode=false
+    B:Slender-Mode=true
 }
 
 
@@ -94,7 +94,7 @@ Ghast {
     D:"Fire Delay"=1.0
     D:"Fire Distance"=64.0
     I:Rarity=9
-    B:Spawn=false
+    B:Spawn=true
 }
 
 
@@ -129,7 +129,7 @@ Main {
     I:"Hardcore Day Cycle"=8
 
     # Mobs inflict double damage on hardcore days [default: false]
-    B:"Hardcore Double Damage"=false
+    B:"Hardcore Double Damage"=true
 
     # Keeps mobs with an active target from despawning. Can causes issues with chunk loading/unloading
     B:"Keep Loaded"=false
