--- a/config/mobends.cfg
+++ b/config/mobends.cfg
@@ -1,9 +1,9 @@
 # Configuration file
 
 animate {
-    B:player=true
+    B:player=false
     B:spider=true
-    B:zombie=true
+    B:zombie=false
 }
 
 
