--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -139,7 +139,7 @@ Main {
     I:"Pathing Cap"=16
 
     # If set to fales, mobs can use much longer routes to get to their target
-    B:"Quick Pathing"=false
+    B:"Quick Pathing"=true
 
     # The amount of ticks of resistance given to the player after changing dimensions
     I:"Resistance Cooldown"=200
