--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -83,7 +83,7 @@ Enderman {
     B:"Player Teleport"=true
 
     # Makes Endermen stalk players with side effects
-    B:Slender-Mode=true
+    B:Slender-Mode=false
 }
 
 
