--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -102,7 +102,7 @@ Main {
     S:"AI Exempt Mob IDs" <
         VillagerGolem
      >
-    B:"Allow Sleep"=false
+    B:"Allow Sleep"=true
 
     # If set to true, ESM will not check whether the entity is a mob or not when setting up new AI
     B:"Ambiguous AI"=true
