--- a/config/buildcraft/objects.cfg
+++ b/config/buildcraft/objects.cfg
@@ -27,10 +27,10 @@ blocks {
 
 
 engines {
-    B:tile.engineCreative=true
-    B:tile.engineIron=true
-    B:tile.engineStone=true
-    B:tile.engineWood=true
+    B:tile.engineCreative=false
+    B:tile.engineIron=false
+    B:tile.engineStone=false
+    B:tile.engineWood=false
 }
 
 
