--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -105,7 +105,7 @@ Main {
     B:"Allow Sleep"=true
 
     # If set to true, ESM will not check whether the entity is a mob or not when setting up new AI
-    B:"Ambiguous AI"=true
+    B:"Ambiguous AI"=false
     B:"Apocalypse Mode"=false
 
     # Mobs will attack player owned pets [default: true]
@@ -183,7 +183,10 @@ Witch {
 
 World {
     I:"Fort Dimensions" <
-        0
+        1
+        6
+        -22
+        -1
      >
     I:"Fort Distance"=1024
     I:"Fort Rarity"=100
