--- a/config/CoroUtil.cfg
+++ b/config/CoroUtil.cfg
@@ -4,11 +4,11 @@ coroutil {
     B:PFQueueDebug=false
     S:chunkCacheDimensionBlacklist_IDs=
     S:chunkCacheDimensionBlacklist_Names=promised
-    B:chunkCacheOverworldOnly=false
+    B:chunkCacheOverworldOnly=true
 
     # Test admin thing for kcauldron issues, kills zombies a bit after sunrise every cleanupStrayMobsDayRate days
-    B:cleanupStrayMobs=false
-    I:cleanupStrayMobsDayRate=5
+    B:cleanupStrayMobs=true
+    I:cleanupStrayMobsDayRate=2
     I:cleanupStrayMobsTimeOfDay=2000
     I:debugChunkRenderPollRate=100
     B:debugChunkRenderUpdates=false
