--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -56,7 +56,7 @@ Creeper {
     B:"Cena Creeper"=true
 
     # How rare are they [range: 0 ~ 2147483647, default: 9]
-    I:"Cena Creeper Rarity"=9
+    I:"Cena Creeper Rarity"=19
 
     # Creepers will run at you at speed before detonating [default: true]
     B:Chargering=true
@@ -70,8 +70,8 @@ Creeper {
 
     Overworld {
         I:"01.Dimension ID"=0
-        D:"02.Health Mult"=1.0
-        D:"03.Damage Mult"=1.0
+        D:"02.Health Mult"=4.0
+        D:"03.Damage Mult"=2.0
         D:"04.Speed Mult"=1.0
         D:"05.Knockback Resistance Mult"=1.0
     }
@@ -88,7 +88,7 @@ Enderman {
 
 
 Ghast {
-    B:Breaching=true
+    B:Breaching=false
     I:"Dimension Blacklist" <
      >
     D:"Fire Delay"=1.0
@@ -110,7 +110,7 @@ Main {
 
     # Mobs will attack player owned pets [default: true]
     B:"Attack Pets"=true
-    I:"Awareness Radius"=64
+    I:"Awareness Radius"=48
     B:"Chaos Mode"=false
 
     # Ignores world specific settings and just uses the global defaults instead
