--- a/config/Titanpower.cfg
+++ b/config/Titanpower.cfg
@@ -1,12 +1,22 @@
 # Configuration file
 
+armour {
+    I:BluArmour_Durability=5000
+    I:BluBoots_Armour=30
+    I:BluChestplate_Armour=70
+    I:BluHat_Armour=20
+    I:BluLeggings_Armour=50
+    B:Enable_BluArmour=true
+}
+
+
 general {
     B:Capes=true
 }
 
 
 generation {
-    B:Oregeneration=true
+    B:Oregeneration=false
 }
 
 
