--- a/config/Opis.cfg
+++ b/config/Opis.cfg
@@ -2,17 +2,17 @@
 
 access_rights {
     # Minimum access level to be able to view tables in /opis command. Valid values : NONE, PRIVILEGED, ADMIN
-    S:opis=NONE
+    S:opis=ADMIN
 
     # Minimum access level to be able to show overlays in MapWriter. Valid values : NONE, PRIVILEGED, ADMIN
-    S:overlays=NONE
+    S:overlays=ADMIN
 
     # List of players with PRIVILEGED access level.
     S:privileged <
      >
 
     # Minimum access level to be able to view tables in /opis command. Valid values : NONE, PRIVILEGED, ADMIN
-    S:tables=NONE
+    S:tables=ADMIN
 }
 
 
