--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -60,7 +60,7 @@ general {
     B:"Disable Vehicle Third-Person and Zoom"=false
 
     # If true, this will move the Oxygen Indicator to the left side. You can combine this with "Minimap Bottom"
-    B:"Minimap Left"=false
+    B:"Minimap Left"=true
 
     # If true, this will move the Oxygen Indicator to the bottom. You can combine this with "Minimap Left"
     B:"Minimap Bottom"=false
