make galacticcraft harder

--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -160,10 +160,10 @@ general {
     I:"Suffocation Damage"=2
 
     # Change this if you wish to balance the mod (if you have more powerful weapon mods).
-    D:"Dungeon Boss Health Modifier"=1.0
+    D:"Dungeon Boss Health Modifier"=6.0
 
     # Set this to true for increased difficulty in modpacks (see forum for more info).
-    B:"Harder Difficulty"=false
+    B:"Harder Difficulty"=true
 
     # Set this to true for less metal use in Galacticraft recipes (makes the game easier).
     B:"Quick Game Mode"=false
