remove amunra compability
id has already been fixed

--- a/config/ExtraPlanets.cfg
+++ b/config/ExtraPlanets.cfg
@@ -684,7 +684,7 @@ items {
 
 "mod compatibility support" {
     # This option will disable & remove the Custom Celestial Selection screen & Change Conflicting Dimension Ids, NOTE: WILL CHANGE THE FOLLOWING DIMENSION IDS Ceres, Eris, Kepler22b, Rhea TO -66 ,-67 -68, -69
-    B:"Enable AmunRa Compatibility"=true
+    B:"Enable AmunRa Compatibility"=false
 
     # This option will disable & remove conflicting Planets/Moons/SpaceStations
     B:"Enable Basic Extended Planets Compatibility (v1.3.1 Alpha)"=false
