disable seal check

--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -175,7 +175,7 @@ general {
     I:"Adventure Game Mode Flags"=15
 
     # If this is enabled, areas sealed by Oxygen Sealers will run a seal check when the player breaks or places a block (or on block updates).  This should be enabled for a 100% accurate sealed status, but can be disabled on servers for performance reasons.
-    B:"Enable Sealed edge checks"=true
+    B:"Enable Sealed edge checks"=false
 
     # Enable this if the standard canister recipe causes a conflict.
     B:"Alternate recipe for canisters"=false
