--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,41 @@
 /bin/
 /resourcepacks/
 !*.cfg
-!/mods
-!/Flan
-!/libraries
 /bin
 /resourcepacks
-!server-icon.png
-!thermos.yml
-!thermos.jar
-!MODStoREMOVE.md
-!*.jar
+
+
+world
+structures
+plugins
+logs
+crash-reports
+blueprints
+asm
+.mixin.out
+resourcepacks
+resources
+
+
+__AMPBackupManifest.ampjson
+banned-ips.json
+banned-players.json
+bukkit.yml
+cauldron.yml
+commands.yml
+entities.yml
+eula.txt
+help.yml
+minetweaker.log
+OpenComputersMod-1.7.5.1290-lua53-native.64.so
+ops.json
+permissions.yml
+server.properties
+servers.dat
+spigot.yml
+thermos.yml
+tileentities.yml
+usercache.json
+usernamecache.json
+wepif.yml
+whitelist.json
