remove native nuclearcraft oregen

--- a/config/NuclearCraft/NCConfig.cfg
+++ b/config/NuclearCraft/NCConfig.cfg
@@ -84,7 +84,7 @@
         I:"Gen Rate"=3
 
         #  [default: true]
-        B:Generation=true
+        B:Generation=false
 
         #  [range: 1 ~ 255, default: 36]
         I:"Max Height"=36
@@ -98,7 +98,7 @@
         I:"Gen Rate"=7
 
         #  [default: true]
-        B:Generation=true
+        B:Generation=false
 
         #  [range: 1 ~ 255, default: 36]
         I:"Max Height"=36
@@ -112,7 +112,7 @@
         I:"Gen Rate"=7
 
         #  [default: true]
-        B:Generation=true
+        B:Generation=false
 
         #  [range: 1 ~ 255, default: 32]
         I:"Max Height"=32
@@ -126,7 +126,7 @@
         I:"Gen Rate"=7
 
         #  [default: true]
-        B:Generation=true
+        B:Generation=false
 
         #  [range: 1 ~ 255, default: 24]
         I:"Max Height"=24
@@ -140,7 +140,7 @@
         I:"Gen Rate"=7
 
         #  [default: true]
-        B:Generation=true
+        B:Generation=false
 
         #  [range: 1 ~ 255, default: 24]
         I:"Max Height"=24
@@ -154,7 +154,7 @@
         I:"Gen Rate"=1
 
         #  [default: true]
-        B:Generation=true
+        B:Generation=false
 
         #  [range: 1 ~ 255, default: 255]
         I:"Max Height"=255
