--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -83,10 +83,10 @@ general {
     B:"Enable Tin Ore Gen"=false
 
     # If this is enabled, aluminum ore will generate on the overworld.
-    B:"Enable Aluminum Ore Gen"=true
+    B:"Enable Aluminum Ore Gen"=false
 
     # If this is enabled, silicon ore will generate on the overworld.
-    B:"Enable Silicon Ore Gen"=true
+    B:"Enable Silicon Ore Gen"=false
 
     # Disable Cheese Ore Gen on Moon.
     B:"Disable Cheese Ore Gen on Moon"=false
