disable eln oregen

--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -100,11 +100,11 @@ lamp {
 
 
 mapgenerate {
-    B:cinnabar=true
+    B:cinnabar=false
     B:copper=false
     B:forceOreRegen=false
     B:lead=false
-    B:tungsten=true
+    B:tungsten=false
 }
 
 
