disable more oregen from railcraft

--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -576,13 +576,13 @@ worldgen {
     ##########################################################################################################
 
     generate {
-        B:abyssal=true
+        B:abyssal=false
         B:copper=false
         B:firestone=true
         B:gold=false
         B:iron=false
         B:lead=false
-        B:quarried=true
+        B:quarried=false
         B:saltpeter=false
         B:sulfur=false
         B:tin=false
