--- a/config/clayspawn.cfg
+++ b/config/clayspawn.cfg
@@ -2,8 +2,8 @@
 
 general {
     I:clayRarity=20
-    B:enableClaySpawn=true
-    B:enableHardenedClaySpawn=true
+    B:enableClaySpawn=false
+    B:enableHardenedClaySpawn=false
 }
 
 
