no more bed to skip rain

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -189,7 +189,7 @@ rain {
     B:"Disable Weather Effects"=false
 
     # Reset rain/thunder when all players sleep [default: true]
-    B:"Reset Rain on Sleep"=true
+    B:"Reset Rain on Sleep"=false
 
     # Always override Vanilla rain sound even when dimension is blacklisted [default: true]
     B:"Always Override Sound"=true
