--- a/config/atg/atg.cfg
+++ b/config/atg/atg.cfg
@@ -2,7 +2,7 @@
 
 biomeids {
     # World ID for ATG. Don't change this unless you are having problems.
-    I:ATGWorldID=9
+    I:ATGWorldID=10
 
     # Set to 0 to disable a biome entirely. Do NOT disable biomes on a generated world!
     I:GravelBeach=141
@@ -42,7 +42,7 @@ features {
     B:Boulders=true
 
     # Adds coal, iron, gold and emeralds to mountain peaks. Disable if you want to use a different mod to manage ore generation.
-    B:HighAltitudeOres=true
+    B:HighAltitudeOres=false
 
     # Generate flowing rivers which follow the terrain. Can sometimes be messy.
     B:Rivers=true
