fix oregen issues

--- a/config/cofh/world/projectred.json
+++ b/config/cofh/world/projectred.json
@@ -1,8 +1,7 @@
 {
     "Electrotine": {
         "template": "uniform",
-        "block": "ProjRed|Exploration:projectred.exploration.ore",
-        "metadata": 6,
+        "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 6},
         "material": "minecraft:stone",
         "clusterSize": 10,
         "numClusters": 3,
@@ -20,8 +19,7 @@
     },
     "Ruby": {
         "template": "uniform",
-        "block": "ProjRed|Exploration:projectred.exploration.ore",
-        "metadata": 0,
+        "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 0},
         "material": "minecraft:stone",
         "clusterSize": 7,
         "numClusters": 1,
@@ -37,8 +35,7 @@
     },
     "Sapphire": {
         "template": "uniform",
-        "block": "ProjRed|Exploration:projectred.exploration.ore",
-        "metadata": 1,
+        "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 1},
         "material": "minecraft:stone",
         "clusterSize": 7,
         "numClusters": 1,
@@ -54,8 +51,7 @@
     },
     "Peridot": {
         "template": "uniform",
-        "block": "ProjRed|Exploration:projectred.exploration.ore",
-        "metadata": 2,
+        "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 2},
         "material": "minecraft:stone",
         "clusterSize": 7,
         "numClusters": 1,
