disable invtweaks loading notification

--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -11,6 +11,7 @@ enableSounds=true
 enableShortcuts=true
 enableAutoEquipArmor=false
 enableServerItemSwap=true
+enableConfigLoadedMesssage=false
 shortcutKeyAllItems=LCONTROL+LSHIFT, RCONTROL+RSHIFT
 shortcutKeyEverything=SPACE
 shortcutKeyOneItem=LCONTROL, RCONTROL
