more frequent roguelike dungeons

--- a/config/roguelike_dungeons/roguelike.cfg
+++ b/config/roguelike_dungeons/roguelike.cfg
@@ -8,7 +8,7 @@ levelRange=50
 levelScatter=10
 looting=0.085
 lowerLimit=60
-preciousBlocks=false
+preciousBlocks=true
 rogueSpawners=true
-spawnFrequency=40
+spawnFrequency=20
 upperLimit=100
